# dnd-audio-converter

./: .gitignore  README.md  check_vector_count.py  debug_db.py  docker-compose.yml  index_campaign_now.py
backend/: Dockerfile  add_player_name_column.py  check_available_models.py  check_models.py  cleanup_files.py  main.py  models.py  pipeline.py  pyproject.toml  requirements.txt  schema.py
backend/app/: main.py
backend/app/api/routers/: campaigns.py  chat.py  highlights.py  moments.py  personas.py  sessions.py  uploads.py
backend/app/core/: config.py  database.py
backend/app/graphql/: schema.py
backend/app/models/: enums.py  models.py
backend/app/services/: audio.py  session_service.py
backend/app/services/llm/: client.py  generators.py  ollama_client.py  prompts.py  rag_context.py  schemas.py  utils.py  vector_store.py
backend/migrations/: env.py
backend/migrations/versions/: 6a5c6384936e_add_aliases_to_persona.py  94de52d3e589_refactor_highlights_to_table.py  d3eb12a07774_add_persona_demographics.py  e690b1bd6b9b_initial_schema.py
backend/scripts/: add_error_column.py  check_statuses.py  migrate_audio_paths.py
backend/tests/: test_api.py  test_regenerate.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  App.tsx  main.tsx  types.ts
frontend/src/client/: index.ts
frontend/src/components/: EditItemModal.tsx  PersonaDetailsModal.tsx
frontend/src/graphql/: mutations.ts  queries.ts
frontend/src/pages/: CampaignList.jsx  CampaignList.tsx  (+15 more)
(+34 files in other folders)
